--- a/style/main.scss
+++ b/style/main.scss
@@ -826,7 +826,7 @@ body {
   margin: 0 auto;
   padding: 105px 140px 50px;
   margin: 0 30px;
-  overflow: hidden;
+  // overflow: hidden;
   .title {
     display: flex;
     h2 {
@@ -865,11 +865,13 @@ body {
     padding-right: 20px;
     .room_list {
       display: flex;
+      transition: 0.5s;
       .clous {
         padding: 0 5px;
         flex: 1;
         position: relative;
         overflow: hidden;
+        transition: all 0.5s;
         .open_clous {
           position: absolute;
           width: calc(100% - 30px);
@@ -886,6 +888,7 @@ body {
           );
           text-align: center;
           color: #fff;
+          transition: 1s;
           .clous_title {
             padding-bottom: 20px;
             font-size: 18px;
@@ -964,6 +967,7 @@ body {
         padding: 0 5px;
         position: relative;
         flex: 1;
+        transition: all 0.5s;
         .open_collection {
           position: absolute;
           width: calc(100% - 30px);
@@ -1021,9 +1025,9 @@ body {
         }
         &:hover {
           flex: 2.5;
-          transition: 1s;
           .open_collection {
             display: flex;
+
           }
           .img {
             position: relative;
@@ -1059,6 +1063,7 @@ body {
         flex: 1;
         position: relative;
         overflow: hidden;
+        transition: all 0.5s;
         .open_mountain {
           position: absolute;
           width: calc(100% - 30px);
@@ -1154,6 +1159,7 @@ body {
         flex: 1;
         position: relative;
         overflow: hidden;
+        transition: all 0.5s;
         .open_morioka {
           position: absolute;
           width: calc(100% - 30px);
@@ -1249,6 +1255,7 @@ body {
         flex: 1;
         position: relative;
         overflow: hidden;
+        transition: all 0.5s;
         .open_reflection {
           position: absolute;
           width: calc(100% - 30px);
@@ -1344,6 +1351,7 @@ body {
         flex: 1;
         position: relative;
         overflow: hidden;
+        transition: all 0.5s;
         .open_linshan {
           position: absolute;
           width: calc(100% - 30px);
